--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/docs/about">About</a></li>
+				<li><a href="/docs/teaching">Teaching</a></li>
 	        		<li><a href="/docs/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
