--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/docs/about">About</a></li>
-				<li><a href="/docs/teach">Teaching</a></li>
+				<li><a href="/docs/teach/digital_data_social_science">Digital Data in Social Science</a></li>
 	        		<li><a href="/docs/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
